--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
-    <qresource prefix="/new/prefix1">
-        <file>wall.jpg</file>
+    <qresource prefix="/files">
+        <file>imgs/wall.jpg</file>
+        <file>txts/map.txt</file>
     </qresource>
 </RCC>
