--- a/resources.qrc
+++ b/resources.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/files">
         <file>imgs/wall.jpg</file>
         <file>txts/map.txt</file>
+        <file>flower.gif</file>
     </qresource>
 </RCC>
