--- a/resources.qrc
+++ b/resources.qrc
@@ -1,6 +1,5 @@
 <RCC>
     <qresource prefix="/files">
-        <file>imgs/wall.jpg</file>
         <file>txts/map.txt</file>
         <file>cords.txt</file>
         <file>imgs/player1.png</file>
@@ -16,5 +15,6 @@
         <file>imgs/chest2.png</file>
         <file>imgs/key1.png</file>
         <file>imgs/silverKey.png</file>
+        <file>imgs/wall.png</file>
     </qresource>
 </RCC>
